# cpp-futu-proto

./: .gitignore  CMakeLists.txt  README.md
docs/img/: overview.mermaid
include/: Common.pb.h  GetGlobalState.pb.h  GetUserInfo.pb.h  InitConnect.pb.h  Notify.pb.h  Qot_Common.pb.h  Qot_GetBroker.pb.h  Qot_GetCapitalDistribution.pb.h  Qot_GetCapitalFlow.pb.h  Qot_GetFutureInfo.pb.h  Qot_GetKL.pb.h  Qot_GetMarketState.pb.h  Qot_GetOptionChain.pb.h  Qot_GetOptionExpirationDate.pb.h  Qot_GetOrderBook.pb.h  Qot_GetOwnerPlate.pb.h  Qot_GetPriceReminder.pb.h  Qot_GetRT.pb.h  Qot_GetSecuritySnapshot.pb.h  Qot_GetTicker.pb.h  Qot_GetUserSecurityGroup.pb.h  Qot_RequestHistoryKL.pb.h  Qot_RequestHistoryKLQuota.pb.h  Qot_RequestTradeDate.pb.h  Qot_SetPriceReminder.pb.h  Qot_StockFilter.pb.h  Qot_Sub.pb.h  Qot_UpdateBroker.pb.h  Qot_UpdateKL.pb.h  Qot_UpdateOrderBook.pb.h  Qot_UpdatePriceReminder.pb.h  Qot_UpdateRT.pb.h  Qot_UpdateTicker.pb.h  Trd_Common.pb.h  Trd_FlowSummary.pb.h  Trd_GetAccList.pb.h  Trd_GetMarginRatio.pb.h  Trd_GetMaxTrdQtys.pb.h  Trd_GetOrderFee.pb.h  Trd_ModifyOrder.pb.h  (+2 more)
src/: Common.pb.cc  GetDelayStatistics.pb.cc  GetGlobalState.pb.cc  GetUserInfo.pb.cc  InitConnect.pb.cc  KeepAlive.pb.cc  Notify.pb.cc  Qot_Common.pb.cc  Qot_GetBasicQot.pb.cc  Qot_GetBroker.pb.cc  Qot_GetCapitalDistribution.pb.cc  Qot_GetCapitalFlow.pb.cc  Qot_GetCodeChange.pb.cc  Qot_GetFutureInfo.pb.cc  Qot_GetHoldingChangeList.pb.cc  Qot_GetIpoList.pb.cc  Qot_GetKL.pb.cc  Qot_GetMarketState.pb.cc  Qot_GetOptionChain.pb.cc  Qot_GetOptionExpirationDate.pb.cc  Qot_GetOrderBook.pb.cc  Qot_GetOwnerPlate.pb.cc  Qot_GetPlateSecurity.pb.cc  Qot_GetPlateSet.pb.cc  Qot_GetPriceReminder.pb.cc  Qot_GetRT.pb.cc  Qot_GetReference.pb.cc  Qot_GetSecuritySnapshot.pb.cc  Qot_GetStaticInfo.pb.cc  Qot_GetSubInfo.pb.cc  Qot_GetSuspend.pb.cc  Qot_GetTicker.pb.cc  Qot_GetTradeDate.pb.cc  Qot_GetUserSecurity.pb.cc  Qot_GetUserSecurityGroup.pb.cc  Qot_GetWarrant.pb.cc  Qot_ModifyUserSecurity.pb.cc  Qot_RegQotPush.pb.cc  Qot_RequestHistoryKL.pb.cc  Qot_RequestHistoryKLQuota.pb.cc  (+33 more)
